--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   email: granica.lukasz@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/GraniLuk # change to your Twitter homepage
+    - https://twitter.com/LukGrani # change to your Twitter homepage
     - https://github.com/GraniLuk # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
