--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: GraniLuk # change to your GitHub username
 
 twitter:
-  username: GraniLuk # change to your Twitter username
+  username: LukGrani # change to your Twitter username
 
 social:
   # Change to your full name.
