--- a/_config.yml
+++ b/_config.yml
@@ -214,6 +214,9 @@ exclude:
   - "*.config.js"
   - package*.json
 
+gems:
+  - jekyll-seo-tag
+
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
